{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "1943f807-a934-4658-8584-ea17917d8cb6",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "49b78959-6692-4818-99e4-a1ae102d0ed6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dbda6adc-2b49-4cfe-9301-08a1ff2ce138",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}